--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </nav>
                 <ul class="contacts list">
                     <li class="contacts-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li class="contacts-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    <li class="contacts-item tel"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
                 </ul>
         </div>
     </header>
