Добавляет иконки к team и advantage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ===========HEADER===========-->
     <header class="header-flex">
         <div class="container">
-            <a href="./" class="header-logo link">Web<span class="logo-firstly">Studio</span></a>
+            <a href="./" class="header-logo link" lang="en">Web<span class="logo-firstly">Studio</span></a>
                 <nav>
                     <ul class="header-list list">
                         <li class="header-item"><a href="./" class="link active">Студия</a></li>
@@ -24,8 +24,11 @@
                     </ul>
                 </nav>
                 <ul class="contacts list">
-                    <li class="contacts-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li class="contacts-item tel"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    <li class="contacts-item">
+                        <a href="mailto:info@devstudio.com" class="link" lang="en">info@devstudio.com</a></li>
+                    <li class="contacts-item">
+                        <a href="tel:+380961111111" class="link">
+                        +38 096 111 11 11</a></li>
                 </ul>
         </div>
     </header>
@@ -44,18 +47,30 @@
             <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="advantage-list list">
                     <li class="list-item">
+                        <svg class="advantage-icon">
+                            <use href="./images/icons.svg#icon-antenna" width="70" heigth="70"></use>
+                        </svg>
                         <h3 class="item-caption">Внимание к деталям</h3>
                         <p class="item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="list-item">
+                        <svg class="advantage-icon">
+                            <use href="./images/icons.svg#icon-clock" width="70" heigth="70"></use>
+                        </svg>
                         <h3 class="item-caption">Пунктуальность</h3>
                         <p class="item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="list-item">
+                        <svg class="advantage-icon">
+                            <use href="./images/icons.svg#icon-diagram" width="70" heigth="70"></use>
+                        </svg>
                         <h3 class="item-caption">Планирование</h3>
                         <p class="item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="list-item">
+                        <svg class="advantage-icon">
+                            <use href="./images/icons.svg#icon-astronaut" width="70" heigth="70"></use>
+                        </svg>
                         <h3 class="item-caption">Современные технологии</h3>
                         <p class="item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -82,7 +97,37 @@
                         <img src="./images/our-team/img1.jpg" alt="man in glases" width="270" class="img">
                         <div class="team-padding">
                             <h3 class="team-caption">Игорь Демьяненко</h3>
-                            <p class="team-text">Product Designer</p>
+                            <p class="team-text" lang="en">Product Designer</p>
+                            <ul class="team-soc-list list">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                         
                     </li>
@@ -90,21 +135,111 @@
                         <img src="./images/our-team/img2.jpg" alt="woman in glases" width="270"  class="img">
                         <div class="team-padding">
                             <h3 class="team-caption">Ольга Репина</h3>
-                            <p class="team-text">Frontend Developer</p>
+                            <p class="team-text" lang="en">Frontend Developer</p>
+                            <ul class="team-soc-list list">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item-team">
                         <img src="./images/our-team/img3.jpg" alt="man in shirt" width="270"  class="img">
                         <div class="team-padding">
                             <h3 class="team-caption">Николай Тарасов</h3>
-                            <p class="team-text">Marketing</p>
+                            <p class="team-text" lang="en">Marketing</p>
+                            <ul class="team-soc-list list">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="item-team">
                         <img src="./images/our-team/img4.jpg" alt="main in t-shirt" width="270"  class="img">
                         <div class="team-padding">
                             <h3 class="team-caption">Михаил Ермаков</h3>
-                            <p  class="team-text">UI Designer</p>
+                            <p  class="team-text" lang="en">UI Designer</p>
+                            <ul class="team-soc-list list">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link link">
+                                        <svg class="team-soc-icon" width="20" heigth="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -114,12 +249,12 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <a href="./" class="footer-logo link">Web<span class="logo-secondary">Studio</span></a>
+            <a href="./" class="footer-logo link" lang="en">Web<span class="logo-secondary">Studio</span></a>
             <address>    
             <ul class="list">
                 <li class="item-adress"><a href="https://goo.gl/maps/gdu9YAMxJbdQwpBC7" 
                 target="_blank" rel="noreferrer noopener nofollow" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="item-adress"><a href="mailto:info@example.com" class="link adress">info@example.com</a></li>
+                <li class="item-adress"><a href="mailto:info@example.com" class="link adress" lang="en">info@example.com</a></li>
                 <li class="item-adress"><a href="tel:+380991111111" class="link adress">+38 099 111 11 11</a></li>
             </ul>
             </address>
