--- a/index.html
+++ b/index.html
@@ -25,10 +25,20 @@
                 </nav>
                 <ul class="contacts list">
                     <li class="contacts-item">
-                        <a href="mailto:info@devstudio.com" class="link" lang="en">info@devstudio.com</a></li>
+                        <a href="mailto:info@devstudio.com" class="link" lang="en">
+                            <svg class="contacts-icon" width="16" height="12">
+                                <use href="./images/icons.svg#icon-posht" >
+                                </use>
+                            </svg> info@devstudio.com</a></li>
                     <li class="contacts-item">
                         <a href="tel:+380961111111" class="link">
-                        +38 096 111 11 11</a></li>
+                            <svg class="contacts-icon" width="10" height="16">
+                                <use href="./images/icons.svg#icon-smartphone">
+                                </use>
+                            </svg>
+                        +38 096 111 11 11
+                        </a>
+                    </li>
                 </ul>
         </div>
     </header>
@@ -47,29 +57,29 @@
             <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="advantage-list list">
                     <li class="list-item">
-                        <svg class="advantage-icon">
-                            <use href="./images/icons.svg#icon-antenna" width="70" heigth="70"></use>
+                        <svg class="advantage-icon"  width="70" heigth="70">
+                            <use href="./images/icons.svg#icon-antenna"></use>
                         </svg>
                         <h3 class="item-caption">Внимание к деталям</h3>
                         <p class="item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="list-item">
-                        <svg class="advantage-icon">
-                            <use href="./images/icons.svg#icon-clock" width="70" heigth="70"></use>
+                        <svg class="advantage-icon" width="70" heigth="70">
+                            <use href="./images/icons.svg#icon-clock"></use>
                         </svg>
                         <h3 class="item-caption">Пунктуальность</h3>
                         <p class="item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="list-item">
-                        <svg class="advantage-icon">
-                            <use href="./images/icons.svg#icon-diagram" width="70" heigth="70"></use>
+                        <svg class="advantage-icon"  width="70" heigth="70">
+                            <use href="./images/icons.svg#icon-diagram"></use>
                         </svg>
                         <h3 class="item-caption">Планирование</h3>
                         <p class="item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="list-item">
-                        <svg class="advantage-icon">
-                            <use href="./images/icons.svg#icon-astronaut" width="70" heigth="70"></use>
+                        <svg class="advantage-icon"  width="70" heigth="70">
+                            <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                         <h3 class="item-caption">Современные технологии</h3>
                         <p class="item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
@@ -245,19 +255,104 @@
                 </ul>
             </div>
         </section>
+        <!-- Regular customers -->
+        <section class="reg-clients">
+            <h2 class="section-caption">Постоянные клиенты</h2>
+            <ul class="clients-list list">
+                <li class="clients-item">
+                    <a href="" class="clients-link link">
+                        <svg class="clients-icon" width="106" height="60">
+                            <use href="./images/icons.svg#icon-client-logo1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link link">
+                        <svg class="clients-icon" width="106" height="60">
+                            <use href="./images/icons.svg#icon-client-logo2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link link">
+                        <svg class="clients-icon" width="106" height="60">
+                            <use href="./images/icons.svg#icon-client-logo3"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link link">
+                        <svg class="clients-icon" width="106" height="60">
+                            <use href="./images/icons.svg#icon-client-logo4"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link link">
+                        <svg class="clients-icon" width="106" height="60">
+                            <use href="./images/icons.svg#icon-client-logo5"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="clients-item">
+                    <a href="" class="clients-link link">
+                        <svg class="clients-icon" width="106" height="60">
+                            <use href="./images/icons.svg#icon-client-logo6"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+
+
+        </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <a href="./" class="footer-logo link" lang="en">Web<span class="logo-secondary">Studio</span></a>
-            <address>    
-            <ul class="list">
-                <li class="item-adress"><a href="https://goo.gl/maps/gdu9YAMxJbdQwpBC7" 
-                target="_blank" rel="noreferrer noopener nofollow" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="item-adress"><a href="mailto:info@example.com" class="link adress" lang="en">info@example.com</a></li>
-                <li class="item-adress"><a href="tel:+380991111111" class="link adress">+38 099 111 11 11</a></li>
-            </ul>
-            </address>
+        <div class="container footer-flex">
+            <div>
+                <a href="./" class="footer-logo link" lang="en">Web<span class="logo-secondary">Studio</span></a>
+                <address>    
+                <ul class="list">
+                    <li class="item-adress"><a href="https://goo.gl/maps/gdu9YAMxJbdQwpBC7" 
+                    target="_blank" rel="noreferrer noopener nofollow" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="item-adress"><a href="mailto:info@example.com" class="link adress" lang="en">info@example.com</a></li>
+                    <li class="item-adress"><a href="tel:+380991111111" class="link adress">+38 099 111 11 11</a></li>
+                </ul>
+                </address>
+            </div>
+            <div class="join">
+                <h2 class="join-title">присоединяйтесь</h2>
+                <ul class="join-list list">
+                    <li class="join-item">
+                        <a href="" class="join-link link">
+                            <svg join-icon width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="join-item" >
+                        <a href="" class="join-link link">
+                            <svg join-icon width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="join-item">
+                        <a href="" class="join-link link">
+                            <svg join-icon width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="join-item">
+                        <a href="" class="join-link link">
+                            <svg join-icon width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
